# AdversarialCircuitEvaluation

./: .gitignore  .gitmodules  Dockerfile  Makefile  README.md  pyproject.toml
.circleci/: config.yml
acdc/: TLACDCCorrespondence.py  TLACDCEdge.py  TLACDCExperiment.py  TLACDCInterpNode.py  acdc_graphics.py  acdc_utils.py  global_cache.py  main.py  types.py
acdc/docstring/: prompts.py  utils.py
acdc/greaterthan/: utils.py
acdc/induction/: utils.py
acdc/ioi/: ioi_data_fetchers.py  ioi_dataset.py  ioi_dataset_constants.py  ioi_dataset_v2.py  utils.py
acdc/logic_gates/: utils.py
acdc/nudb/: joblib_caching.py  runner_main.py
acdc/nudb/adv_opt/: adam_lr_scheduler.py  data_fetchers.py  edge_serdes.py  hydra_utils.py  loss_fn.py  main.py  main_circuit_performance_distribution.py  masked_runner.py  noise_generators.py  settings.py  utils.py
acdc/nudb/adv_opt/analysis/: 2024_02_28_input_only.py  2024_02_28_input_only.yaml  2024_02_28_scratch.py  2024_w16_4_plot_heatmaps.py  a2024_02_28_input_only.py  a2024_02_28_scratch.py  a2024_w10_01_analyze_brute_force_v1_results.py  a2024_w10_01_analyze_brute_force_v1_results.yaml  a2024_w16_4_plot_heatmaps.py  a2024_w17_3_0_cleanup.py  a2024_w17_3_analysis.py  a2024_w18_analyze_different_prompts.py  a2024_w20_01_calculate_wasserstein_resample_distances.py  a2024_w20_02_analyze_wasserstein_resample_distances.py  a2024_w20_03_calculate_pairwise_wasserstein_distances.py  a2024_w21_01_generate_latex_tables_with_circuit_outputs.py  a2024_w21_02_generate_latex_tables_with_percentiles.py  a2024_w24_01_analyze_quantile_metric_robustness.py  a2024_w25_01_analyze_quantile_metric_robustness_several_sources.py  a2024_w28_00_analysis_helpers.py  a2024_w28_01_analyze_brute_force_v2_results.py  a2024_w28_02_calculate_brute_force_analysis_v2.py  a2024_w28_03_plot_brute_force_v2_loss_distributions.py  a2024_w28_04_analyze_brute_force_v2_results_ioi.py  analyze_brute_force_results.py  analyze_brute_force_results.yaml  analyze_brute_force_results_scratch.py  analyze_main.py  analyzer.py  analyzer_brute_force_old.py  analyzer_brute_force_v1.py  output_parser.py  percentile_bounds.py
acdc/nudb/adv_opt/brute_force/: circuit_edge_fetcher.py  main.py  results.py
acdc/nudb/adv_opt/conf/: config.yaml  config_bruteforce.yaml
acdc/nudb/adv_opt/conf/experiment/: greaterthan.yaml  ioi.yaml  reverse_sweep.yaml  sweep_w09.yaml  sweep_w09_2_quick.yaml  sweep_w09_3_many_seeds.yaml  sweep_w09_4_many_seeds_greaterthan.yaml  sweep_w10_1_patch_lr.yaml  sweep_w10_2_patch_many_seeds.yaml  sweep_w11_1_sweep_lr_with_noise.yaml  sweep_w11_2_test_noise_schedule.yaml  tracr_reverse.yaml  w13_1_lbfgs.yaml  w15_1_test_bug_fixes.yaml
acdc/nudb/adv_opt/conf/experiment_bf/: all.yaml
acdc/nudb/adv_opt/conf/task/: docstring.yaml  greaterthan.yaml  ioi.yaml  tracr_reverse.yaml
acdc/nudb/adv_opt/experiment_scratches/: exp_w27_1_calculate_average_activation.py
acdc/nudb/adv_opt/experiments/: w15_0_command.py  w15_1_hm.py
acdc/nudb/adv_opt/experiments/core/: k8s_launcher.py
acdc/nudb/adv_opt/tests/: example_model.py  test_edge_serdes.py  test_percentile_bounds.py
acdc/tracr_task/: utils.py
experiments/: all_roc_plots.py  collect_data.py  docstring_results.py  induction_results.py  launch_abstract.py  launch_abstract_old.py  launch_all_sixteen_heads.py  launch_docstring.py  launch_induction.py  launch_spreadsheet.py  launcher.py
experiments/results/plots_data/: generate_makefile.py
ims/: make_jsons.py
k8s/: kaniko-build.yaml  kaniko.sh  launch_runner.py  runner.yaml
notebooks/: auc_tables.py  df_plots_data.py  easier_roc_plot.py  editing_edges.py  emacs_plotly_render.py  implementation_demo.py  make_plotly_plots.py  minimal_acdc_node_roc.py  pareto_plot.py  roc_plot_generator.py
subnetwork_probing/: README.md  create_reset_networks.py  launch_all_edge_sp.py  launch_grid_fill.py  masked_transformer.py  runner_template.yaml  sp_utils.py  train.py  train_edge_sp.py
tests/acdc/: test_acdc.py  test_edge.py  test_greaterthan.py  test_indexed_hook_point_name.py  test_true_edges.py
tests/ioi/: test_ioi_data_fetchers.py  test_ioi_data_generator.py  test_ioi_dataset_v2.py
tests/subnetwork_probing/: run_edge_sp_tests.py  test_masked_hookpoint.py  test_masked_runner.py  test_masked_transformer.py  test_sp_launch.py
