[tool.poetry]
name = "acdc"
version = "0.0.0" # This should automatically be set by the CD pipeline on release
description = "ACDC: Automatic Circuit DisCovery implementation on top of TransformerLens"
authors = ["Arthur Conmy, Adrià Garriga-Alonso"]
license = "MIT"
readme = "README.md"
packages = [{include = "acdc"}, {include = "subnetwork_probing"}]

[tool.poetry.dependencies]
python = "^3.10"
einops = "^0.6.0"
numpy = [{ version = "^1.21", python = "<3.10" },
         { version = "^1.23", python = ">=3.10" }]
torch = ">=1.10, <2.0"
datasets = "^2.7.1"
transformers = "^4.35.0"
tokenizers = "^0.15.0"
tqdm = "^4.64.1"
pandas = "^1.1.5"
wandb = "^0.13.5"
torchtyping = "^0.1.4"
huggingface-hub = "^0.16.0"
cmapy = "^0.6.6"
networkx = "^3.1"
plotly = "^5.12.0"
kaleido = "0.2.1"
pygraphviz = "^1.11"
tracr = { path = "./submodules/tracr/", develop = true }
# For some reason, I could not get this to work:
# tracr = {git = "https://github.com/google-deepmind/tracr.git", rev = "e75ecda"}
transformer-lens = "1.6.1"
typer = "^0.9.0"
jaxtyping = "^0.2.25"
joblib = "^1.3.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
jupyterlab = "^3.5.0"
jupyter = "^1.0.0"
ruff = "^0.2.1"
pyright = "^1.1.348"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    # Ignore numpy.distutils deprecation warning caused by pandas
    # More info: https://numpy.org/doc/stable/reference/distutils.html#module-numpy.distutils
    "ignore:distutils Version classes are deprecated:DeprecationWarning"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
testpaths = "acdc subnetwork_probing experiments notebooks tests"

[tool.ruff]
line-length = 120
extend-exclude = ['submodules/']

[tool.ruff.lint]
# Enable the isort rules.
extend-select = ["I"]
ignore = ["F722"]  # the jaxtyping annotations cause F722

[tool.pyright]
exclude = ["subnetwork_probing/transformer_lens", "submodules"]

